--- a/q/273996.html
+++ b/q/273996.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>C89</td><td>240709T214615Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274048#274048">John Bol</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Jelly</td><td>240710T000622Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274049#274049">Jonathan</a></td></tr>
-<tr d-ix="2"><td>034</td><td>JavaScript ES11</td><td>240708T151928Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274019#274019">Arnauld</a></td></tr>
-<tr d-ix="3"><td>029</td><td>APL+WIN</td><td>240708T152151Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274020#274020">Graham</a></td></tr>
-<tr d-ix="4"><td>nan</td><td>Nibbles</td><td>240708T115251Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274012#274012">Dominic </a></td></tr>
+<tr d-ix="0"><td>2814</td><td>Nibbles</td><td>240708T115251Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274012#274012">Dominic </a></td></tr>
+<tr d-ix="1"><td>067</td><td>C89</td><td>240709T214615Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274048#274048">John Bol</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Jelly</td><td>240710T000622Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274049#274049">Jonathan</a></td></tr>
+<tr d-ix="3"><td>034</td><td>JavaScript ES11</td><td>240708T151928Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274019#274019">Arnauld</a></td></tr>
+<tr d-ix="4"><td>029</td><td>APL+WIN</td><td>240708T152151Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274020#274020">Graham</a></td></tr>
 <tr d-ix="5"><td>030</td><td>Ruby</td><td>240708T100801Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274009#274009">G B</a></td></tr>
 <tr d-ix="6"><td>154</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
 <tr d-ix="7"><td>022</td><td>05AB1E</td><td>240708T081925Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274007#274007">Kevin Cr</a></td></tr>
@@ -39,7 +39,24 @@
 <tr d-ix="10"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
 <tr d-ix="11"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C89, 67 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>33</s> 28 nibbles (14 bytes)</h1>
+<pre><code>? ! _ \``@_ * o$ ~100c114a011ffada
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN5XsFRQV4hViEhIc4hW0FPJVFOoMDQySDQ1NEg0MDdPSElMSISqhGpZHK6lXqSvFQrkA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Returns a positive integer (truthy) if the input is a valid <code>ls</code> option, zero otherwise.</p>
+<pre><code>~100c114a011ffada   # hex value
+      \``@@         # converted to bits and reversed:
+                    # 0 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 1 0 1 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 1
+  !                 # zip these with
+    _               # &quot; abcdefghijklmnopqrstuvwxyz.,!?_\n+ ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-+:;\&quot;'~`@#$%^&amp;*()[]{}&lt;&gt;\\/=|&quot;
+            *       # by multiplication (so converting to codepoints)
+                    # (so retaining codepoints of &quot;acdfgiklmnopqrstACFHLRS1&quot;, with intervening zeros)
+?                   # and get the index of 
+              o$    # codepoint of the input
+                    # (or return zero if absent)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>C89, 67 bytes</h1>
 <pre><code>char*strchr();f(c){return!!strchr(&quot;ikqrsglnoAaCmx1FpHLRdSftcu&quot;,c);}
 </code></pre>
 <p>This is just a wrapper around the C standard library function <code>strchr()</code>.  It leans on default <code>int</code> typing to golf away a few bytes of type declaration. Needing to declare <code>strchr()</code> because that function's return type is not <code>int</code>, it saves a few bytes by doing so itself instead of including the header where that function is declared, and by using a K&amp;R-style declaration that does not provide a prototype. That declaration could be moved inside the function to make the function be the only top-level unit, but that would not change the code size.</p>
@@ -49,7 +66,7 @@
 <p>This is a variation on @Arnauld's ES11 bitmask solution, adapted to account for C not necessarily providing an integer type wider than 64 bits.  The bitmask is made to fit in 64 bits by using it only for test characters with values greater than 64, special-casing the one option having a lesser value.</p>
 <p>HOWEVER, this approach assumes that the execution character set is congruent with US-ASCII, which is very common, but not required or universal.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>“7Ȥ2R¶Ṁṡỵ’BoØBċ
 </code></pre>
 <p>A monadic link that accepts a single character from <code>0-9A-Za-z</code> and yields <code>1</code> if it is an option or <code>0</code> if not.</p>
@@ -63,7 +80,7 @@
         ċ - count occurrences of {C}
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES11), 34 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES11), 34 bytes</h1>
 <p>Expects an ASCII code as a BigInt and returns <strong>0</strong> or <strong>1</strong>.</p>
 <p>This is an attempt at using a bitmask and see how it compares with the regular expression.</p>
 <p>By reducing the code modulo <strong>71</strong>, we create a harmless collision between <code>0,1,2,3</code> and <code>w,x,y,z</code> (both mapped to <code>48 … 51</code>) where only <code>1</code> and <code>x</code> respectively are truthy.</p>
@@ -79,28 +96,11 @@
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/Z1k4/2tDR2c3DJyg4MTklLT0zW7ekIlZfryS1uEQjWfO/dbSenp6SgaGRsYmpmbmFpaOTs4urm7uHp5e3j6@ff0BgUHBIaFh4RGRUYlJySmpaekZmVnZObl5@QWFRcUlpWXlFZZVSrF5afpFrYnKGRrKCrZ1CNZeCQk5qiUJqRUFqcklqioKtglJmNlB9ek5evmOic26FoVsB0EUpwWklyUp6mXkpqRX@aUDXKCjaKuga6gC1g0BRajFQJ0jcmgsolJyfV5yfk6qXk5@ukawDktWBKLFFWGSvoP5@R/@jOVOApLqClYL6o7k96kDttZrW/wE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 29 bytes</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 29 bytes</h1>
 <p>Prompts for input. Can be single character or a vector of characters. Returns 1 if character is valid, 0 if not.</p>
 <pre><code>⎕∊'ikqrsglnoAaCmx1FpHLRdSftc'
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz0NJPGoo0s9M7uwqDg9Jy/fMdE5t8LQrcDDJyglOK0kWf0/UBnX/zQudTd1LiAZBSaTMrOrCtS5AA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 33 nibbles (16.5 bytes)</h1>
-<pre><code>? +! ``@@ &gt;&gt;;$ ~^$@ $ ~5b5ff80052883008
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN9XtFbQVFRISHBwU7OysVRTq4lQcFICUaZJpWpqFgYGpkYWFsYGBBUQ5VNfyaCX1KnWlWCgXAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Returns a positive integer (truthy) if the input is a valid <code>ls</code> option, zero otherwise.</p>
-<pre><code>~5b5ff80052883008   # hex value
-     ``@@           # converted to bits:
-                    # 1 0 1 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 1 0 1 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 1
-   !                # zip these with
-            ;$      # &quot; abcdefghijklmnopqrstuvwxyz.,!?_\n+ ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-+:;\&quot;'~`@#$%^&amp;*()[]{}&lt;&gt;\\/=|&quot;
-          &gt;&gt;        # without the initial space character
-               ~^$@ # selecting only the 1-bits
-  +                 # flatten to give
-                    # &quot;acdfgiklmnopqrstACFHLRS1&quot;
-?                   # and get the index of the input, or zero if absent
-</code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 30 bytes</h1>
 
