--- a/q/235964.html
+++ b/q/235964.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>077</td><td>C#</td><td>240711T125631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274080#274080">Mayube</a></td></tr>
-<tr d-ix="1"><td>260</td><td>sed 4.2.2</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>255</td><td>sed 4.2.2</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="1"><td>077</td><td>C#</td><td>240711T125631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274080#274080">Mayube</a></td></tr>
 <tr d-ix="2"><td>006</td><td>K ngn/k</td><td>220401T190852Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/245872#245872">coltim</a></td></tr>
 <tr d-ix="3"><td>019</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
 <tr d-ix="4"><td>005</td><td>Japt</td><td>211004T133302Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235995#235995">Shaggy</a></td></tr>
@@ -107,15 +107,7 @@
 <tr d-ix="78"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="79"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.microsoft.com/net/core/platform" rel="nofollow noreferrer">C#</a>, 77 bytes</h1>
-
-<pre class="lang-cs prettyprint-override"><code>n=&gt;Enumerable.Range(0,n+1).Select(i=&gt;Math.Pow(i,i)).Aggregate(1.0,(a,b)=&gt;a*b)
-</code></pre>
-<p><a href="https://tio.run/##XU/BSsQwED0nXzHHxNbQ9dptQURPLizuweOSZqfZgTbRJFVE9tvrKB5EGHjMm8e891y@djHhumQKHg4fueDcyr@beaTw2sqXZZjIgZtszrBP0Sc7f0rxS@diC8PDEtyWQqnhFPmAPRxH6NbQ9fdhmTFZ5syTDR5VU4dqo80BJ3RFUdfvbDmbfXxXVJPW5tb7hN4WVBvT1MrWg@56ezXotf3v@hbpBDtLQWkpOJMYYwLFMYCgg6Zl2MLNN1YVK34k4i6GHDnNc6KCXBHVcVRszN/FRfJc1i8" rel="nofollow noreferrer" title="C# (.NET Core) – Try It Online">Try it online!</a></p>
-<p>Boring answer, but C# doesn't really have fancy ways of doing this. Even with the addition of the range operator (<code>0..n+1</code>), that produces a <code>System.Range</code>, which is not an <code>IEnumerable</code> and so can't be used as an iterator :(</p>
-<p><code>1.0</code> in the call to <code>Aggregate</code> because it expects the start value and the return type of the predicate to be exactly equal, and <code>Math.Pow</code> returns doubles, not ints.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>291</s> <s>287</s> <s>276</s> 260 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <sup><s>291</s> <s>287</s> <s>276</s> <s>260</s></sup> 255 bytes</h1>
 <pre><code>h;G;G;:a
 s/.\n/\n\n/g;x;s/\n.*//;tc
 :b;s/.*/&amp;\n&amp;/m;T
@@ -123,17 +115,25 @@ s/.\n/\n\n/g;x;s/\n.*//;tc
 G;x;g;s/\n(.)/\1/g
 T;s/\n..+\n/&amp;/;ta
 x;s/\n.*//;G
-T;s/.(.*\n)(.*)..\n(#*).(\r.*)?/\1\1\3\4\r\2/;h;ta
+T;s/#\n(#+).#\n(#*)#(.*)/\n\2\n\2\3\r\1/;h;ta
 s/[^\r]*//;y/\r/\n/;h;s/.*/#/
 t;:d;s/.*/&amp;\n&amp;/m
 :;t;x;s/^#//;x;td
 s/\n?//g
 T;x;s/\n#//;x;t
 </code></pre>
-<p><a href="https://tio.run/##VZDBbsIwDIbvfo1IVduJuC1lW5MKjn0BbjNIQKHssDC1OcDLr/tTtonJkhPrt39/yXBsR3O0A7/ls2rDkeKObpwX83Lx/PJacfZ7ZRpYZVwptj70Z8zdeLYNwuygaXEsDqmzV8jidMpoPZDZo0QRiYv4w67JHKaOrYJ@tX5PDY5umol1wpIDYX230E8wjGCzowfTZpJ1rFNxCXKisTxWOGPpUa7ggZhLKb0UbM9hHi/cSr8J8zeWHl5BmMgUk7emfcQkY/0/ypbC@hVPbHeWH2U0J5SK6/rv11SWL8N/4Tk1IHOw6USnSw40/jRmlFNBcyq/Lp/@/eKGcdZ/Aw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30 seconds)</a><br />
-<a href="https://tio.run/##XZBNboMwEIX3cw1LCKjisQlpi42SJRfIrg4S@SNdlFTAIlHVq5c@k7aiwZLN6M1882a6w34wB9vxi55lGw4E13RlnczTxePTc8bq95epY6E4E2x7n6@Y6@FkCxxTQZOuYdfgqu0FsmtkzEjdkdkiRBC4JuA3uyazGzNKAf1i@y0VeOqxJpQROw0L6xtCPgAYAFPRBFqMsgxl7JoIdyTRPBR4Q9ciXIGBM3epa13C9uTrMWHp2o2vv7JrwfLC6Eww9dbspzbJ2P6fyz359isevd28/CgD9vKhFb5PriCbI9SK8/xviZXSS78@TJfDsw6rWEYyXrI31x@9NYXlo7enMBm/DDEliHuCmBJqKKXCZIMiTQnNKaXF1/m9fz033TBrvwE" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50 seconds, longer but more efficient footer))</a></p>
+<p><a href="https://tio.run/##VZBNbsIwEIX3cw1LETbCYyfQNnZEl7kAuxokIBC6qKkSL@DydcemRSDLf3pvnr/xeOiiOdgRP/SsXmPBsIcr6rKaL15e32pU/0eEEZnCmqENya8Q@3iyLQ2zJU06j87T0tsLyc5LgWTdg9nRlS6F8wV@2RWYfXZsGOkXG3bQ0tbnmonk6DQhrG4RckqBBcVs4SG0zTIjO5tymXfB2UQKngjKPCs3UJA9pVJqbuOGdSq9ohvIlIQMxRCCNd0jIRgbngA7SC@/Y8a6Yfwp0RwTCDbN/cOY0sv0VdRJI4XThCa5FEt0JbVxjAo0lFDB/Of8HT7Pfoyz4Rc" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30 seconds)</a><br />
+<a href="https://tio.run/##XZDBbsIwEETv@xuWImKE106gLTaiR36AWw1SIBB6aKiSHEBVf73p2LRVSqLYsd7seHbbQ9nbg2v5xUzmG04EV3Rlk@XT2cPj05z17y9Ty0LzXLDrgl4zV/3JrfDaAkz5mn2NpXIXYF8ryZDuye5wxCHxdcJvbk12HxVbAX5x3Y5W2KpYM1Ipe4MI65uFGsMwgU1BA9NVxAJyMU5V3GUqRkqmIUEWv9w3MHKnUIrmtr7ZhNIr@waiAGIowdQ5Ww4TknXdv4AlhZufOca6xfghPVJ8GI3nkwtgewQteLH4m1@hzTJMDo0tlPRmVEiVKrlkn6GrY4imMXfcHVyYbJiDGDqIewcxdKhAthqd9ZoMZZTTlGZf5/fu9Vy3/aT5Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50 seconds, longer but more efficient footer))</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to and from decimal in header/footer.</p>
 <p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.microsoft.com/net/core/platform" rel="nofollow noreferrer">C#</a>, 77 bytes</h1>
+
+<pre class="lang-cs prettyprint-override"><code>n=&gt;Enumerable.Range(0,n+1).Select(i=&gt;Math.Pow(i,i)).Aggregate(1.0,(a,b)=&gt;a*b)
+</code></pre>
+<p><a href="https://tio.run/##XU/BSsQwED0nXzHHxNbQ9dptQURPLizuweOSZqfZgTbRJFVE9tvrKB5EGHjMm8e891y@djHhumQKHg4fueDcyr@beaTw2sqXZZjIgZtszrBP0Sc7f0rxS@diC8PDEtyWQqnhFPmAPRxH6NbQ9fdhmTFZ5syTDR5VU4dqo80BJ3RFUdfvbDmbfXxXVJPW5tb7hN4WVBvT1MrWg@56ezXotf3v@hbpBDtLQWkpOJMYYwLFMYCgg6Zl2MLNN1YVK34k4i6GHDnNc6KCXBHVcVRszN/FRfJc1i8" rel="nofollow noreferrer" title="C# (.NET Core) – Try It Online">Try it online!</a></p>
+<p>Boring answer, but C# doesn't really have fancy ways of doing this. Even with the addition of the range operator (<code>0..n+1</code>), that produces a <code>System.Range</code>, which is not an <code>IEnumerable</code> and so can't be used as an iterator :(</p>
+<p><code>1.0</code> in the call to <code>Aggregate</code> because it expects the start value and the return type of the predicate to be exactly equal, and <code>Math.Pow</code> returns doubles, not ints.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 6 bytes</h1>
 <pre><code>*/&amp;!1+
