--- a/q/274061.html
+++ b/q/274061.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>064</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
+<tr d-ix="0"><td>033</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
+<tr d-ix="1"><td>064</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
 <tr d-ix="2"><td>044</td><td>Java</td><td>240711T082106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274078#274078">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>049</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
 <tr d-ix="4"><td>024</td><td>05AB1E</td><td>240711T074131Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274075#274075">Kevin Cr</a></td></tr>
@@ -39,19 +39,23 @@
 <tr d-ix="10"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
 <tr d-ix="11"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hoXhwobtLWZAidHsQYT1VEPFQWogmNVnSjCQNVFx9ES9F9OC5N699Cn0aS6Z7-b9__mGGZN4_jbt_7j6q5Ms11SL-nS829uXUJm-rUqQ5DH2xL6PoZF_GKzlfaqnSlKRwnrpXHPg7Oq7AkJZITfJZQBXfUc0MBCScBUOvODowY-7dduiNkQzjeL1Geo0ixFQgz7zWVHkKMBpHRWYOC78NcG8vBDyAog1Wd2DYlb7Uj0pa4ZPsJvO8ptMDUR02vd7iTmxs3QRuD0E9meGn5uMnCsKAPLnGkrwNA5JsSBBWeVsUyx2MF-Ga4Zm6DvkP" rel="nofollow noreferrer"><s>41</s></a> 33 bytes</h1>
+<ul>
+<li>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/92901/dingus">Dingus</a></li>
+</ul>
+<pre class="lang-ruby prettyprint-override"><code>-&gt;s{s=~/^h?[oó]|^11$|^8/i??u:?o}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hMXjsupQFKUK3h0VYTxVEPJQWokk3XdKMJA1UXH0RL0X04Lm3vfYp9Gksme7l__75JxmS-fgy7vGl-yzjb9eU8-j3bL6yrzZ-XxQyyWDo830Rhuf7IlpUSeKuEnjDg38npyUY0pJKk2xGmRI7prkBSoIZHXol0IEZc-82Q29MxTGOlkuk1zBETAXy0mvNlKcEo_GqTM1x4I8B4e1awhMo1mD1AIbf6Gu9VZWVPknvUs9bNj0Q1WHT6z3OxMbGTRD2GNSTGQ61GD-REw7k2TWWZG1ASbwiNCizNs8vdjBuRGiOa-o65D8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Thanks to almost the same syntax, the regex is gratefully copypasted from the <a href="https://codegolf.stackexchange.com/a/274064/101276">Arnauld's answer</a> :D</p>
+<p><em>(The following comment refers to the previous 41-byte version)</em></p>
+<p>What I like here, is how three question marks appear together (alas, a space cannot be removed), each one having a different role: the first one is a part of the boolean expression that checks whether a value is <code>nil</code>, the second one belongs to the ternary operator and the last one is a shortcut for <code>'o'</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s:re.match(&quot;(?i)^h?[oó]|^11$|^8&quot;,s)and&quot;u&quot;or&quot;o&quot;
 import re
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fZPPSsQwEMYP3vYpyuihBf9QFqQIsoII9VRBxEO7hbhNbSXNlLQ5CPsmXgqi4HlvXvsU69O42LrGdJu5hOSX-fhmJnl5L5_rDHnzmp5Hb7JOj7z1BSPFQ0Ks6kzQ44LUi8wGe5Y7cTYLsV3Nl7HrHixjDw4rh_AEJKAAhElelChqS9BO52vvpBQ5r20IcR5xcCbdNrWBMPq0yRQI1iYcx9q38I-6P6e_MaCuynV6aswtCDPk-u2HQApj-DLDBTJS052m71Ek1_yKP7K8ykCnN6SvdaeyNJq-M1L_X_KQ0gpHK_JlYXDlt58FTbYXetxziHgotakio7qcVOVWQuRbPR1706k-GpUOeyDVJzHogUIzFFzrgUoDQcZNB7eBwRUaXQVG6uPQc_dvmqZbvwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
-<pre class="lang-ruby prettyprint-override"><code>-&gt;s{(s=~/^h?[oó]|^11$|^8/i).nil?? ?o:?u}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hoXhwobtLWZAidHsQYT1VEPFQWogmNVnSjCQNVFx9ES9F9OC5N699Cn0aS6Z7-b9__mGGZN4_jbt_7j6q5Ms11SL-nS829uXUJm-rUqQ5DH2xL6PoZF_GKzlfaqnSlKRwnrpXHPg7Oq7AkJZITfJZQBXfUc0MBCScBUOvODowY-7dduiNkQzjeL1Geo0ixFQgz7zWVHkKMBpHRWYOC78NcG8vBDyAog1Wd2DYlb7Uj0pa4ZPsJvO8ptMDUR02vd7iTmxs3QRuD0E9meGn5uMnCsKAPLnGkrwNA5JsSBBWeVsUyx2MF-Ga4Zm6DvkP" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Thanks to almost the same syntax, the regex is gratefully copypasted from the <a href="https://codegolf.stackexchange.com/a/274064/101276">Arnauld's answer</a> :D</p>
-<p>What I like here, is how three question marks appear together (alas, a space cannot be removed), each one having a different role: the first one is a part of the boolean expression that checks whether a value is <code>nil</code>, the second one belongs to the ternary operator and the last one is a shortcut for <code>'o'</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1>Java, 44 bytes</h1>
 
